--- a/wasm_example2/Cargo.toml
+++ b/wasm_example2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm_example1"
+name = "wasm_example2"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,9 @@ winit = { version = "0.29", features = ["rwh_05"] }
 env_logger = "0.10"
 log = "0.4.6"
 wgpu = "22.0"
+bytemuck = { version = "1.19", features = ["derive"] }
+flume = "0.11"
+pollster = "0.3"
 fern = "0.6"
 wasm-logger = "0.2.0"
 
